--- a/new-farmer2.css
+++ b/new-farmer2.css
@@ -171,8 +171,8 @@
     position: absolute;
     width: 173.08px;
     height: 45.41px;
-    left: 173.54px;
-    top: 433px;
+    left: 12%;
+    top: 55.8%;
     
     font-family: Montserrat;
     font-style: normal;
@@ -199,8 +199,8 @@
     position: absolute;
     width: 283.02px;
     height: 25.65px;
-    left: 370.18px;
-    top: 443px;
+    left: 25.5%;
+    top: 57.8%;
 
     font-family: Montserrat;
     font-style: normal;
@@ -273,7 +273,7 @@
     position: relative;
     left: 54.23%;
     right: 2.98%;
-    top: 568px;
+    top: 39vw;
     bottom: 22.42%;
     color: #2A363B;
 
